[metadata]
name = recognize-anything-api
version = 0.0.1
description = Dockerized FastAPI wrapper around the recognize-anything image recognition models


[options]
packages = find:
include_package_data = True
install_requires = file: requirements.txt

[options.packages.find]
exclude =
    datasets
    images
    outputs
    pretrained
